--- a/Avanti_ML_Modulo1_Unidade3.ipynb
+++ b/Avanti_ML_Modulo1_Unidade3.ipynb
@@ -48,7 +48,7 @@
         "id": "fLaIjovUr9qR",
         "outputId": "e51da14b-8a7c-4039-9288-3df6cb57afda"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
         "frutas = ['banana','maçã', 'laranja', 'abacaxi']\n",
         "\n",
         "tem_5_letras = [ i for i in frutas if len(i)>5]\n",
-        "termina_com_a = [f for f in frutas if (f.endswith('a') or f.endswith('ã'))]\n",
+        "termina_com_a = [f for f in frutas if (f.endswith('a') or f.endswith('ã') or f.endswith('â'))]\n",
         "\n",
         "print(\"Frutas: \", frutas)\n",
         "print(\"Frutas com mais de 5 letras: \", tem_5_letras)\n",
@@ -168,9 +168,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P15rGXOazXOV",
-        "outputId": "57c8432b-69fd-4190-b6b1-5e74dfff9224"
+        "outputId": "a0f29235-9c2e-42f3-f96c-4dee5346ed28"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +265,7 @@
         "id": "CyNTuOv9hlDt",
         "outputId": "1ac055b4-debf-4459-ed05-f9ef80a4b29b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +316,7 @@
         "id": "57M5zWPbhibY",
         "outputId": "f25e0cc4-c3f5-40bf-b1ca-0b5cda4f72ab"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +355,7 @@
         "id": "qLr3ORjfhwie",
         "outputId": "790b796c-08f1-4348-a34c-63166e26f3ab"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +399,7 @@
         "id": "SAx_0sQchxF8",
         "outputId": "4b2241f8-6977-48eb-f12b-6fa62b2eff1c"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +441,7 @@
         "id": "L3MQDAIThxiP",
         "outputId": "31e289a0-e864-48c0-ad6d-44bb86ab10b1"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
